# CPP-Vulnerable-File-Server

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties  vcpkg.json
.github/workflows/: build.yml
include/: Database.h  FileServer.h  Utils.h  Version.h
src/: AuthModule.cpp  CacheModule.cpp  Crypto.cpp  Database.cpp  FileServer.cpp  NetworkHandler.cpp  SessionManager.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
